# tools

move_audio/: move_audio.py  move_audio.sh
musicdedupe/: .gitignore  README.md  musicdedupe.py  pyproject.toml
musicdedupe/src/musicdedupe/: __init__.py  cache.py  cli.py  delete.py  grouping.py  hashing.py  review.py  scan.py  track.py  ui.py
musicdedupe/tests/: conftest.py  test_cache.py  test_group_source.py  test_grouping.py  test_hashing.py  test_normalize.py
